idea progress https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -29,97 +29,63 @@ We look for:
 
 Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
 
+---
+
+---
+
 ## Project Ideas (updated January 2025)
   
-### Project 1: Develop an Accessible Game using SceneryStack  
+### Project 1: Develop a Simple Accessible Game using SceneryStack  
 
 **Project Size:** 175 hours  
 **Estimated Difficulty:** Intermediate  
 **Recommended Skills:**  
 
-- **JavaScript:** Proficient in JavaScript for implementing interactive features.  
+- **JavaScript:** Proficient in JavaScript for implementing interactive features and how it interacts with the DOM.
 - **TypeScript:** Basic knowledge of TypeScript to work with existing codebases and enhance type safety.  
-- **Git/GitHub:** Skills to contribute code and communicate effectively within the development team.  
-- **Web Accessibility (a11y):** Understanding of ARIA roles, screen reader compatibility, and inclusive design principles.  
-- **Game Development Concepts:** Experience or interest in developing interactive applications with game logic.  
+- **Git/GitHub:** Skills to contribute code and communicate effectively within the development team.
 
 [Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)  
 
-**Mentor(s):** TBD  
-
----
+**Mentor:** Jonathan Olson
 
 ### Description  
 
 SceneryStack supports the creation of accessible, flexible web interactives by providing keyboard access, screen reader compatibility, and other accessibility features. While these features are well integrated into **PhET Interactive Simulations**, there is a lack of practical examples demonstrating their use in interactive games.  
 
-This project aims to develop a **fully accessible web-based game** using SceneryStack, showcasing **keyboard navigation, alternative input methods, screen reader-compatible interactions, and customizable visual/audio features**. The game will serve as a **template and proof-of-concept** for making browser-based games more inclusive.  
-
----
+This project aims to develop a **fully accessible web-based game demo** using SceneryStack, showcasing **keyboard navigation, screen reader-compatible interactions, and customizable visual/audio features**. The game will serve as a **template and proof-of-concept** for making browser-based games more inclusive.  
 
 ### Key Tasks  
 
-- **Game Concept and Design:**  
-  - Select a game genre (e.g., board game, puzzle, card game, turn-based strategy).  
-  - Define core mechanics and ensure they can be implemented with accessibility in mind.  
+- **Game Concept and Design:** Select a game genre (e.g., board game, puzzle, card game, turn-based strategy). We recommend a simple game, but with sufficient complexity to demonstrate accessibility features, such as Chess.
 
 - **Develop an Interactive Game with Accessibility Features:**  
-  - Use **SceneryStack** to create a working prototype with full accessibility support.  
-  - Implement **keyboard navigation**, including arrow-key and shortcut controls.  
-  - Support **screen reader interactions**, ensuring proper navigation and feedback.  
-  - Incorporate **Voicing features**, enabling auditory game feedback.  
-  - Add **color customization options** to improve contrast for low-vision users.  
-  - Implement **pan and zoom functionality** for adjustable views.  
-
-- **User Testing and Refinement:**  
-  - Conduct accessibility audits to validate compatibility with screen readers (e.g., NVDA, JAWS, VoiceOver).  
-  - Gather feedback from users with disabilities and iterate based on findings.  
-  - Ensure compatibility with different browsers and devices.  
-
-- **Documentation & Contribution:**  
-  - Provide a detailed **development guide** for implementing SceneryStack in other games.  
-  - Write **clear accessibility testing guidelines** to help future contributors maintain accessibility.  
-
----
+  - Use [**SceneryStack**](https://scenerystack.org/) to create a working prototype with full accessibility support.  
+    - Implement **keyboard navigation**, including arrow-key and shortcut controls.  
+    - Support **interactive screen reader descriptions [(Interactive Description)](https://phet.colorado.edu/en/inclusive-design/features?section=interactive-description)** via a Parallel DOM, ensuring proper navigation and feedback.
+    - Incorporate **Voicing features**, enabling auditory game feedback.  
+    - Add **color customization options** to improve contrast for low-vision users.  
+    - Implement **pan and zoom functionality** for adjustable views.  
+  - **Collaborate with Designers:** Work with designers to create spoken descriptions that you will implement.
 
 ### Expected Outcomes/Benefits/Deliverables  
 
-**Fully Functional Accessible Game** – A playable, web-based game with **comprehensive a11y support**, serving as a model for future projects.  
+**Fully Functional Accessible Game** – A playable, if simple, web-based game with **comprehensive a11y support**, serving as a model for future projects.  
 
 **Showcase of SceneryStack's Accessibility Features** – Demonstrating how developers can **integrate a11y-first principles** into game development.  
 
-**Improved Web Gaming Accessibility** – Addressing the current lack of **keyboard-accessible** and **screen reader-friendly** online games.  
-
-**Extensive Documentation** – Guides on implementing accessibility features in browser-based games.  
-
-**User Testing Insights** – Providing valuable data on accessible design for interactive applications.  
-
----
+**Improved Web Gaming Accessibility** – Addressing the current lack of **keyboard-accessible** and **screen reader-friendly** online games.
 
 ### Why This Project?  
 
-Many popular online games are **not keyboard or screen reader accessible**, making them unusable for many people with disabilities. Here are some examples:  
+Many popular online games are **not keyboard or screen reader accessible**, making them unusable for many people with disabilities. For example, the most popular online Chess platforms do not offer keyboard navigation or screen reader support, or only offer the most mimimal support - not enough for a rich interactive experience.  
 
-- **[Chess.com](https://www.chess.com/play/computer)** – No keyboard accessibility.  
-- **[Lichess](https://lichess.org/)** – Has a "blind mode," but usability is unclear.  
-- **[RoyalUr](https://royalur.net/)** – Not keyboard accessible.  
-- **[Washington Post Blackjack](https://games.washingtonpost.com/games/blackjack)** – Inaccessible; #1 search result for "keyboard-accessible blackjack."  
-
-Our game will serve as an **accessible alternative** and prove that web games **can** be both **engaging and inclusive** from the start.  
-
-Unlike most games that require users to **find and activate** accessibility settings, our project aims to provide **clear accessibility features from the moment the page loads**—removing barriers to entry for all players.  
-
----
+This project will serve as an **accessible alternative** and prove that web games **can** be both **engaging and inclusive** from the start. Unlike most games that require users to **find and activate** accessibility settings, SceneryStack aims to provide **clear accessibility features from the moment the page loads**—removing barriers to entry for all players.  
 
 ### How to Apply  
 
-Interested students should:  
+Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
 
-1. **Join the Discussion:** Participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express interest and ask questions.  
-2. **Showcase Relevant Experience:** Share examples of past projects, contributions, or knowledge in accessibility and game development.  
-3. **Propose Ideas:** Suggest potential game concepts and accessibility enhancements for consideration.  
-
-This project is an **exciting opportunity to contribute to inclusive gaming**, improve your web development skills, and help shape the future of accessible web interactives! 🚀
 ---
 
 ### Project 2: Implement Accessibility View for All SceneryStack Projects
@@ -132,26 +98,35 @@ This project is an **exciting opportunity to contribute to inclusive gaming**, i
 - TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
 - Git/GitHub: Skills to contribute code and communicate
 [Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
-**Mentor(s):** (To be determined)
+**Mentor:** Jesse Greenberg
 
 #### Description
 
-Generalize the a11y view to work for any Scenery display. Proposal to "start from scratch" in contrast to modifying existing sim context: Generalize the a11y view to work in other contexts chipper#1512.
+Designing spoken descriptions for interactive web projects can be challenging, especially when iteration requires interacting with the screen reader to assess changes in real time. It is also difficult to communicate the intended experience to designers and developers who are not familiar with screen readers. The PhET Project has developed an "A11y (Accessibility) View" for interactive screen reader descriptions for PhET simulations. This view allows developers to see the spoken descriptions for interactive elements in real time, facilitating the design and implementation of accessible features. However, the current A11y View is specific to the PhET simulation context and does not work for other Scenery displays. This project in feature developments aims to generalize the A11y View to work for any Scenery display, enabling developers to create accessible web projects more efficiently.
 
-Requisite Background Knowledge:
-Requires getting familiar with PDOM and Scenery, and likely some familiarity with design framework
-Understand current a11y view
-Understand basics of description design framework
+This project will involve
 
 #### Key Tasks
 
+- Get Familiar with PDOM and Scenery: Learn about the Parallel DOM (PDOM) and Scenery frameworks used in PhET simulations.
+- Understand the Current A11y View: Familiarize yourself with the existing a11y view in PhET simulations and how it interacts with the screen reader (e.g., [Greenhouse Effect A11y View](https://phet-dev.colorado.edu/html/greenhouse-effect/1.3.0-dev.6/phet/greenhouse-effect_a11y_view.html))
+- Understand basics of description design framework: Understand the basics of the [description design framework]().
+- Implement [a new instantiation of the A11y View](https://github.com/phetsims/chipper/issues/1512) from scratch in the [Scenery](https://github.com/phetsims/scenery/) library.
+- Develop a very simple interactive example to highlight the a11y view in action.
+
 #### Expected Outcomes/Benefits/Deliverables
+
+- Generalized A11y View: A new A11y View that works for any Scenery display, enabling developers to create accessible web projects more efficiently.
+- Interactive Example: A simple interactive example demonstrating the A11y View in action.
+- Improved Accessibility: Enhanced accessibility for web projects developed using Scenery, making them more inclusive and user-friendly.
 
 #### Why This Project?
 
+Implementing an accessibility view for all SceneryStack projects is a crucial step towards making web projects more inclusive and user-friendly. This project contributes to the accessibility of educational tools and offers valuable experience in front-end development, accessibility standards implementation, and user experience design.
+
 #### How to Apply
 
-Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
 
 ---
 
@@ -166,7 +141,7 @@ Interested students should participate in the [Project Discussion Thread](https:
 - Git/GitHub: Skills to contribute code and communicate
   
 [PhET Custom Text Size Preferences Discussion](<https://github.com/orgs/scenerystack/discussions/TODO>: ADD SPECIFIC THREAD)
-**Mentor(s):** (To be determined)
+**Mentor(s):** Samuel Reid, Jonathan Olson
 
 #### Description
 
@@ -197,54 +172,83 @@ Implementing custom text size preferences is a crucial step towards making PhET 
 
 #### How to Apply
 
-Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
 
 ---
 
-### Project 4: Develop Missing Components for SceneryStack UI Library
+### Project 4: Develop Missing Components for SceneryStack’s UI Library
 
-Project Size: 90 hours
-Estimated difficulty: Intermediate
-Recommended Skills: JavaScript and basic Typescript
-[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions) <!--TODO: ADD SPECIFIC THREAD
-**Mentor(s):** (To be determined)
+**Project Size:** 90-175 hours  
+**Estimated Difficulty:** Intermediate  
+**Recommended Skills:**  
 
-#### Description
+- **JavaScript:** Proficiency in JavaScript for building interactive UI components.  
+- **TypeScript:** Basic knowledge for enhancing type safety and contributing to an existing codebase.  
+- **Git/GitHub:** Skills to contribute code, manage pull requests, and communicate effectively within the development team.
+- (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.  
 
-Investigate popular UI frameworks and create common, but missing UI components in SceneryStack (to SceneryStack spec w/ a11y) e.g., Create a non-modal dialog sun#916. Improve the glass pane layer so ComboBox can operate without a “parent” being passed in.
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions) <!--TODO: ADD SPECIFIC THREAD-->  
 
-PhET Interactive Simulations aim to make science and math learning engaging and accessible. While the current PhET simulations include modal dialogs for user interactions, there is a growing need for a non-modal dialog component. Non-modal dialogs allow users to interact with other parts of the application without closing the dialog, enhancing usability and accessibility.
+**Mentor(s):** Samuel Reid
 
-Several PhET simulations have implemented custom solutions for non-modal dialogs, leading to inconsistencies and maintenance challenges. This project involves developing a standardized, reusable non-modal dialog component within the PhET's Sun library (the UI component library). The component should address previous issues identified in custom implementations, such as proper focus management, positioning, and accessibility compliance.
+---
 
-#### Key Tasks
+### Description  
 
-Non-Modal Dialog Component:
-Develop a flexible and reusable non-modal dialog component within the PhET Sun library.
-Support features such as customizable positioning, focus management, and interaction with underlying content.
+**SceneryStack** is an open-source web development framework designed for creating interactive, accessible web interfaces. While it includes core UI elements—such as buttons, sliders, and basic layout components—several **common UI patterns** are still missing. Many popular frameworks (e.g., Material UI, Bootstrap, Angular Material) provide a broad range of components such as dialogs (both modal and non-modal) and advanced form elements.  
 
-Accessibility Compliance:
-Ensure the component adheres to accessibility standards (e.g., WCAG).
-Implement proper ARIA roles and keyboard navigation to make the dialog accessible to users with disabilities.
+This project invites contributors to **investigate popular UI frameworks** and **design/implement** new components for SceneryStack that align with **best practices** in accessibility, user experience, and coding standards. Example components that could be developed include:  
 
-Integration and Refactoring:
-Integrate the new non-modal dialog component into at least one existing PhET simulation, replacing custom implementations.
-Refactor simulations like Mean Share and Balance, Natural Selection, and Models of the Hydrogen Atom to use the new component, if time permits.
+- **Non-Modal Dialog:** Allows the user to interact with the rest of the page while the dialog is open.  
+- **Enhanced ComboBox / DropDown with a Refined Glass Pane Layer:** Improves the layering system so components like combo boxes can be used anywhere in the scene tree.  
 
-Documentation and Guidelines:
-Write comprehensive documentation on how to use the non-modal dialog component.
-Provide guidelines for developers to incorporate the component into other simulations.
+By building these components to SceneryStack’s specifications—with a focus on **accessibility**—you will help grow the library’s functionality and empower developers to create more robust, inclusive interfaces.
 
-Testing and Quality Assurance:
-Conduct thorough testing across different browsers and devices to ensure compatibility.
-Work with the PhET team to perform user testing and gather feedback for improvements.
+Project scope depends on the complexity of the components chosen and the desired level of polish. Contributors are encouraged to discuss their ideas with the mentor and community to ensure alignment with SceneryStack’s goals.
 
-By implementing a standardized non-modal dialog component, this project will significantly improve the consistency and accessibility of PhET simulations. It will serve educators and learners who benefit from more interactive and flexible user interfaces, particularly those who rely on assistive technologies.
+---
 
-#### Expected Outcomes/Benefits/Deliverables
+### Key Tasks  
 
-#### Why This Project?
+1. **Research and Planning**  
+   - Investigate popular UI libraries (e.g., Material UI, Bootstrap, Angular Material) to understand typical UI patterns.  
+   - Identify the **top missing components** in SceneryStack.
 
-#### How to Apply
+2. **Design and Prototyping**  
+   - Create initial design specifications for **common, reusable UI components**—such as non-modal dialogs, advanced combo boxes, tab panels, or others.  
+   - Collaborate with the mentor and community to ensure designs meet SceneryStack’s coding standards and accessibility guidelines.  
 
-Interested students should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
+3. **Implementation with Accessibility in Mind**: Implement components with SceneryStack's accessibility features, such as keyboard navigation and screen reader support.  
+
+4. **Integration and Refactoring**: Ensure new components integrate seamlessly into SceneryStack’s existing architecture.  
+   - If needed, refactor relevant sections of the codebase (e.g., the glass pane layer) to improve maintainability and performance.
+   - Create **developer-friendly documentation**, including code examples and usage guidelines.
+
+5. **Testing and QA**  
+   - Write **unit and integration tests** to verify component functionality and prevent regressions.
+
+---
+
+### Expected Outcomes/Benefits/Deliverables  
+
+- **New UI Components:** A set of **well-documented, accessible** components ready for immediate use in SceneryStack-based projects.  
+- **Accessibility Enhancements:** Improved **assistive technology support** for common UI components (keyboard navigation, screen reader announcements, etc.).  
+- **Refined Codebase:** Potential refactoring of underlying infrastructure (e.g., glass pane layer) for easier maintenance and future component development.
+- **Community Growth:** Contributions will encourage **more developers** to adopt SceneryStack, seeing that it supports core UI features with robust accessibility.  
+
+---
+
+### Why This Project?  
+
+Despite the growing focus on **inclusive design**, many open-source libraries either lack **key UI components** or provide them with **inconsistent** accessibility features. Filling these gaps in SceneryStack will:  
+
+- **Accelerate Development:** Reduce the need for custom-coded solutions, streamlining the creation of new projects.  
+- **Ensure Accessibility from the Start:** Provide **built-in best practices** that automatically offer keyboard, screen reader, and other essential support.  
+- **Promote Inclusivity:** Expand the range of accessible user interfaces, benefitting both **developers** who want to build inclusive apps and **end-users** with diverse needs.  
+- **Showcase Good A11y Practices:** Demonstrate how to implement components “accessibility-first,” serving as a reference for other open-source projects.  
+
+---
+
+### How to Apply  
+
+Interested contributors should participate in the [Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/) (TODO: ADD SPECIFIC THREAD) to express their interest, ask questions, and engage with mentors and the PhET community.
